qt/gen_qheaderview.h

typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QHeaderView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QHeaderView_virtualbase_sizeHint(const void* self);
bool QHeaderView_override_virtual_setVisible(void* self, intptr_t slot);
void QHeaderView_virtualbase_setVisible(void* self, bool v);
bool QHeaderView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QHeaderView_virtualbase_doItemsLayout(void* self);
bool QHeaderView_override_virtual_reset(void* self, intptr_t slot);
void QHeaderView_virtualbase_reset(void* self);
bool QHeaderView_override_virtual_currentChanged(void* self, intptr_t slot);
void QHeaderView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* old);
bool QHeaderView_override_virtual_event(void* self, intptr_t slot);
bool QHeaderView_virtualbase_event(void* self, QEvent* e);
bool QHeaderView_override_virtual_paintEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QHeaderView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
bool QHeaderView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QHeaderView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QHeaderView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QHeaderView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* e);
bool QHeaderView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QHeaderView_virtualbase_viewportEvent(void* self, QEvent* e);
bool QHeaderView_override_virtual_paintSection(void* self, intptr_t slot);
void QHeaderView_virtualbase_paintSection(const void* self, QPainter* painter, QRect* rect, int logicalIndex);
bool QHeaderView_override_virtual_sectionSizeFromContents(void* self, intptr_t slot);
QSize* QHeaderView_virtualbase_sectionSizeFromContents(const void* self, int logicalIndex);
bool QHeaderView_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QHeaderView_virtualbase_horizontalOffset(const void* self);
bool QHeaderView_override_virtual_verticalOffset(void* self, intptr_t slot);
int QHeaderView_virtualbase_verticalOffset(const void* self);
bool QHeaderView_override_virtual_updateGeometries(void* self, intptr_t slot);
void QHeaderView_virtualbase_updateGeometries(void* self);
bool QHeaderView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QHeaderView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QHeaderView_override_virtual_dataChanged(void* self, intptr_t slot);
void QHeaderView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QHeaderView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QHeaderView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QHeaderView_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QHeaderView_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QHeaderView_override_virtual_scrollTo(void* self, intptr_t slot);
void QHeaderView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QHeaderView_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QHeaderView_virtualbase_indexAt(const void* self, QPoint* p);
bool QHeaderView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QHeaderView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QHeaderView_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QHeaderView_virtualbase_moveCursor(void* self, int param1, int param2);
bool QHeaderView_override_virtual_setSelection(void* self, intptr_t slot);
void QHeaderView_virtualbase_setSelection(void* self, QRect* rect, int flags);
bool QHeaderView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QHeaderView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QHeaderView_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QHeaderView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QHeaderView_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QHeaderView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QHeaderView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QHeaderView_virtualbase_sizeHintForRow(const void* self, int row);
bool QHeaderView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QHeaderView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QHeaderView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QHeaderView_virtualbase_inputMethodQuery(const void* self, int query);
bool QHeaderView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QHeaderView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QHeaderView_override_virtual_selectAll(void* self, intptr_t slot);
void QHeaderView_virtualbase_selectAll(void* self);
bool QHeaderView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QHeaderView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QHeaderView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QHeaderView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QHeaderView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QHeaderView_virtualbase_updateEditorData(void* self);
bool QHeaderView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QHeaderView_virtualbase_updateEditorGeometries(void* self);
bool QHeaderView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QHeaderView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QHeaderView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QHeaderView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QHeaderView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QHeaderView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QHeaderView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QHeaderView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QHeaderView_override_virtual_closeEditor(void* self, intptr_t slot);
void QHeaderView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);