qt/gen_qheaderview.nim

proc fQHeaderView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QHeaderView_virtualbase_sizeHint".}
proc fcQHeaderView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_sizeHint".}
proc fQHeaderView_virtualbase_setVisible(self: pointer, v: bool): void{.importc: "QHeaderView_virtualbase_setVisible".}
proc fcQHeaderView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_setVisible".}
proc fQHeaderView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QHeaderView_virtualbase_doItemsLayout".}
proc fcQHeaderView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_doItemsLayout".}
proc fQHeaderView_virtualbase_reset(self: pointer, ): void{.importc: "QHeaderView_virtualbase_reset".}
proc fcQHeaderView_override_virtual_reset(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_reset".}
proc fQHeaderView_virtualbase_currentChanged(self: pointer, current: pointer, old: pointer): void{.importc: "QHeaderView_virtualbase_currentChanged".}
proc fcQHeaderView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_currentChanged".}
proc fQHeaderView_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QHeaderView_virtualbase_event".}
proc fcQHeaderView_override_virtual_event(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_event".}
proc fQHeaderView_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QHeaderView_virtualbase_paintEvent".}
proc fcQHeaderView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_paintEvent".}
proc fQHeaderView_virtualbase_mousePressEvent(self: pointer, e: pointer): void{.importc: "QHeaderView_virtualbase_mousePressEvent".}
proc fcQHeaderView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_mousePressEvent".}
proc fQHeaderView_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QHeaderView_virtualbase_mouseMoveEvent".}
proc fcQHeaderView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_mouseMoveEvent".}
proc fQHeaderView_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QHeaderView_virtualbase_mouseReleaseEvent".}
proc fcQHeaderView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_mouseReleaseEvent".}
proc fQHeaderView_virtualbase_mouseDoubleClickEvent(self: pointer, e: pointer): void{.importc: "QHeaderView_virtualbase_mouseDoubleClickEvent".}
proc fcQHeaderView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_mouseDoubleClickEvent".}
proc fQHeaderView_virtualbase_viewportEvent(self: pointer, e: pointer): bool{.importc: "QHeaderView_virtualbase_viewportEvent".}
proc fcQHeaderView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_viewportEvent".}
proc fQHeaderView_virtualbase_paintSection(self: pointer, painter: pointer, rect: pointer, logicalIndex: cint): void{.importc: "QHeaderView_virtualbase_paintSection".}
proc fcQHeaderView_override_virtual_paintSection(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_paintSection".}
proc fQHeaderView_virtualbase_sectionSizeFromContents(self: pointer, logicalIndex: cint): pointer{.importc: "QHeaderView_virtualbase_sectionSizeFromContents".}
proc fcQHeaderView_override_virtual_sectionSizeFromContents(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_sectionSizeFromContents".}
proc fQHeaderView_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QHeaderView_virtualbase_horizontalOffset".}
proc fcQHeaderView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_horizontalOffset".}
proc fQHeaderView_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QHeaderView_virtualbase_verticalOffset".}
proc fcQHeaderView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_verticalOffset".}
proc fQHeaderView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QHeaderView_virtualbase_updateGeometries".}
proc fcQHeaderView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_updateGeometries".}
proc fQHeaderView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QHeaderView_virtualbase_scrollContentsBy".}
proc fcQHeaderView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_scrollContentsBy".}
proc fQHeaderView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QHeaderView_virtualbase_dataChanged".}
proc fcQHeaderView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_dataChanged".}
proc fQHeaderView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QHeaderView_virtualbase_rowsInserted".}
proc fcQHeaderView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_rowsInserted".}
proc fQHeaderView_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QHeaderView_virtualbase_visualRect".}
proc fcQHeaderView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_visualRect".}
proc fQHeaderView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QHeaderView_virtualbase_scrollTo".}
proc fcQHeaderView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_scrollTo".}
proc fQHeaderView_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QHeaderView_virtualbase_indexAt".}
proc fcQHeaderView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_indexAt".}
proc fQHeaderView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QHeaderView_virtualbase_isIndexHidden".}
proc fcQHeaderView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_isIndexHidden".}
proc fQHeaderView_virtualbase_moveCursor(self: pointer, param1: cint, param2: cint): pointer{.importc: "QHeaderView_virtualbase_moveCursor".}
proc fcQHeaderView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_moveCursor".}
proc fQHeaderView_virtualbase_setSelection(self: pointer, rect: pointer, flags: cint): void{.importc: "QHeaderView_virtualbase_setSelection".}
proc fcQHeaderView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_setSelection".}
proc fQHeaderView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QHeaderView_virtualbase_visualRegionForSelection".}
proc fcQHeaderView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_visualRegionForSelection".}
proc fQHeaderView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QHeaderView_virtualbase_setSelectionModel".}
proc fcQHeaderView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_setSelectionModel".}
proc fQHeaderView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QHeaderView_virtualbase_keyboardSearch".}
proc fcQHeaderView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_keyboardSearch".}
proc fQHeaderView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QHeaderView_virtualbase_sizeHintForRow".}
proc fcQHeaderView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_sizeHintForRow".}
proc fQHeaderView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QHeaderView_virtualbase_sizeHintForColumn".}
proc fcQHeaderView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_sizeHintForColumn".}
proc fQHeaderView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QHeaderView_virtualbase_inputMethodQuery".}
proc fcQHeaderView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_inputMethodQuery".}
proc fQHeaderView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QHeaderView_virtualbase_setRootIndex".}
proc fcQHeaderView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_setRootIndex".}
proc fQHeaderView_virtualbase_selectAll(self: pointer, ): void{.importc: "QHeaderView_virtualbase_selectAll".}
proc fcQHeaderView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_selectAll".}
proc fQHeaderView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QHeaderView_virtualbase_rowsAboutToBeRemoved".}
proc fcQHeaderView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_rowsAboutToBeRemoved".}
proc fQHeaderView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QHeaderView_virtualbase_selectionChanged".}
proc fcQHeaderView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_selectionChanged".}
proc fQHeaderView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QHeaderView_virtualbase_updateEditorData".}
proc fcQHeaderView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_updateEditorData".}
proc fQHeaderView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QHeaderView_virtualbase_updateEditorGeometries".}
proc fcQHeaderView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_updateEditorGeometries".}
proc fQHeaderView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QHeaderView_virtualbase_verticalScrollbarAction".}
proc fcQHeaderView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_verticalScrollbarAction".}
proc fQHeaderView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QHeaderView_virtualbase_horizontalScrollbarAction".}
proc fcQHeaderView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_horizontalScrollbarAction".}
proc fQHeaderView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QHeaderView_virtualbase_verticalScrollbarValueChanged".}
proc fcQHeaderView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_verticalScrollbarValueChanged".}
proc fQHeaderView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QHeaderView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQHeaderView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_horizontalScrollbarValueChanged".}
proc fQHeaderView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QHeaderView_virtualbase_closeEditor".}
proc fcQHeaderView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_closeEditor".}
